# SpiroBot

./: .gitignore  CMakeLists.txt  README.md  SampleGcode.gcode  build_spirobot.sh  config.json  gcodetest.gcode  gcodetest_pen1.gcode  gcodetest_pen2.gcode
docs/: README.md  spirobot-enhancements.md  spirobot-overview.md  spirograph-design-requirements.md  spirograph-project-summary.md
include/: drawingarea.h  gcodeexportdialog.h  gcodegenerator.h  mainwindow.h
src/: drawingarea.cpp  gcodeexportdialog.cpp  gcodegenerator.cpp  main.cpp  mainwindow.cpp
